--- a/Device_Info/src/main/AndroidManifest.xml
+++ b/Device_Info/src/main/AndroidManifest.xml
@@ -1,2 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.prasunmondal.lib.android.deviceinfo" />
+    package="com.prasunmondal.lib.android.deviceinfo" >
+
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+</manifest>
