--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
-    implementation 'com.github.prasunmondal:lib.android.deviceInfo:0.0.3'
+//    implementation 'com.github.prasunmondal:lib.android.deviceInfo:0.0.3'
 
 }
